# voice_recognition

./: .gitignore  README.md  pyproject.toml
tests/: test_command_builder.py  test_sound_detector.py  test_sox_recorder.py  test_speech_to_text.py  test_voice_recognition.py  test_voice_recogntion.py
voice_recognition/: command_builder.py  main.py  sound_detector.py  sox_recorder.py  speech_to_text.py  voice_io.py
voice_recogntion/: deepspeech.py  main.py  sox_recorder.py  speech_to_text.py
