[tool.poetry]
name = "voice_recogntion"
version = "0.1.0"
description = ""
authors = ["Tom Selfin <selfint@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
deepspeech = "^0.9.3"
SpeechRecognition = "^3.8.1"
pocketsphinx = "^0.1.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}
PyAudio = "^0.2.11"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
